# flutter_gpmf_parser

./: .gitignore  CMakeLists.txt  README.md  pubspec.yaml
android/: CMakeLists.txt
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/gpmf_flutter/: MainActivity.kt
ios/: CMakeLists.txt  Podfile  setup_ios_build.sh
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/: gopro_telemetry_extractor.dart  gpmf_bindings.dart
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: CMakeLists.txt
native/src/: GPMF_mp4reader.c  gpmf_bindings.c  gpmf_parser.c
scripts/: build_linux.sh  build_windows.bat
test/: gpmf_parser_test.dart  widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
